[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Player/Shield-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Shield.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Shield.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 76 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 76 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 76 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Shield",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 3.96597, 33.9874 )

[node name="MagicianShield" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "Shield"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.11893, -0.927025 )
shape = SubResource( 5 )

[node name="ShieldSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="ShieldDuration" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_MagicianShield_body_entered"]
